# web-blog

./: README.md  pyproject.toml
config/: settings.py  urls.py
datatable/: admin.py  forms.py  models.py  urls.py  views.py
datatable/templatetags/: datatable_tag.py
static/css/: style.css
static/js/: category-table.js  post-table.js
templates/blog/: base.html  home.html
templates/blog/include/: header.html
templates/datatable/: base.html  category.html  category_add.html  category_update.html  post.html  post_add.html  post_update.html
templates/datatable/include/: header.html
