[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["selver96 <selver.said01@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
Django = "^4.0.3"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
